# USAA_Project

./: 75_fraudish_urls.csv  LICENSE  README.md  app.py  eda.ipynb  embedding.py  fraud_glossary.csv  fraudish_urls.csv  fruad_terms.csv  fruad_url_extractor.py  pyproject.toml  rag_core.py  serve_streamlit.py  sitemap_pull.py  url_parser.py
